<?xml version="1.0"?>
<package>
  <name>hlds_3dtof</name>
  <version>1.0.1</version>
  <description>ROS Driver for the HLDS 3D TOF sensor</description>

  <maintainer email="wayne.rust@educatedrobot.com">Wayne Rust</maintainer>

  <license>CONFIDENTIAL NDA</license>

  <url type="website"></url>
  <url type="repository"></url>
  <url type="bugtracker"></url>

  <author email="wayne.rust@educatedrobot.com">Wayne Rust</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>camera_info_manager</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>camera_info_manager</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
